@@ -21,6 +21,23 @@
     <li>Will Pletka</li>
     <li>Fausto Velazquez</li>
 </ul>
+
+<p> </p>
+
+<p> For visual studio code: <br>
+Start by attempting to run and possibly fail the launch of the program. A launch.json should appear. <br>
+In the launch.json you will have to copy and paste the given line below with your path. <br>
+Then just follow along with Run Configurations to finally launch the program. 
+</p>
+
+<p> In launch.json, add the following: <br>
+"vmArgs": "--module-path [INSERT PATH TO JAVAFX LIB FOLDER] --add-modules javafx.controls,javafx.fxml", <br>
+</p>
+
+<p>In Run Configurations, add the following: <br>
+--module-path [INSERT PATH TO JAVAFX LIB FOLDER] --add-modules javafx.controls,javafx.fxml
+</p>
+
 </body>
 
 </html>
